Implement the Path on /user to update user with facebook data & improve swagger doc
